--- a/templates/edit_playlist.j2
+++ b/templates/edit_playlist.j2
@@ -38,26 +38,29 @@
         </table>
 
         <div id="edit">
-            <!-- form to edit data in Artists-->
-            <form id="editArtist" action="/edit_artist/{{data[0].artistId}}" method="post">
-                <legend><strong>Edit Artist</strong></legend>
+            <!-- form to edit data in Playlists-->
+            <form id="editPlaylist" action="/edit_playlist/{{data[0].playlistId}}" method="post">
+                <legend><strong>Edit Playlist</strong></legend>
                 <fieldset>
                     <!-- We can preset form inputs to match attributes currently stored for 'id' of person to be updated via value= and accessing our passed data tuple -->
                     <!-- Create hidden form input to store the passed 'id' of the person we are editing so we can access it easily in our 'POST' method in our app.py -->
-                    <input type="hidden" value="{{data[0].artistId}}" class="form-control" id="artistId" name="artistId" required>
-                    <label for="make">first name:</label>
+                    <input type="hidden" value="{{data[0].playlistId}}" class="form-control" id="playlistId" name="playlistId" required>
+                    
+                    <label for="make">playlistName:</label>
+                    <input type="text" value="{{data[0].playlistName}}" class="form-control" id="playlistName" name="playlistName" pattern="[A-Za-z0-9.@]{1,}" required>
+                    
+                    <label for="model">playlistDescription:</label>
+                    <input type="text" value="{{data[0].playlistDescription}}" class="form-control" id="playlistDescription" name="playlistDescription" pattern="[A-Za-z0-9.@]{1,}" required>
+                    
+                    <label for="model">userId:</label>
+                    <input type="text" value="{{data[0].userId}}" class="form-control" id="userId" name="userId" pattern="[A-Za-z0-9.@]{1,}" required>
 
-                    <input type="text" value="{{data[0].fname}}" class="form-control" id="fname" name="fname" pattern="[A-Za-z]{1,}" required>
-                    <label for="model">last name:</label>
-
-                    <input type="text" value="{{data[0].lname}}" class="form-control" id="lname" name="lname" pattern="[A-Za-z]{1,}" required>
-                    <label for="model">email:</label>
-
-                    <input type="text" value="{{data[0].email}}" class="form-control" id="email" name="email" pattern="[A-Za-z0-9.@]{1,}" required>
+                    <label for="model">numberOfSongs:</label>
+                    <input type="text" value="{{data[0].numberOfSongs}}" class="form-control" id="numberOfSongs" name="numberOfSongs" pattern="[0-9]{1,}" required>
                 
                 </fieldset>
-                <input type="submit" value="Edit Artist" name="Edit_Artist" class="btn btn-primary" style="margin:.5rem;">
-                <a href='/artist'><input class="btn" type="button" value="cancel"></a>
+                <input type="submit" value="Edit Playlist" name="Edit_Playlist" class="btn btn-primary" style="margin:.5rem;">
+                <a href='/playlist'><input class="btn" type="button" value="cancel"></a>
             </form>
 
 </html>
