--- a/templates/playlist.j2
+++ b/templates/playlist.j2
@@ -1,7 +1,7 @@
 <html>
 <!-- Adapted from the people.html UI design -->
 <head>
-	<title>Artists</title>
+	<title>Playlists</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<script language="JavaScript">
 	function showform(dowhat) {
@@ -37,19 +37,19 @@
 		}
 	}
 
-	function newArtist() {
+	function newPlaylist() {
 		showform('insert');
 	}
 
-	function updateArtist(pid) {
+	function updatePlaylist(pid) {
 		showform('update');
 	}
 
-	function deleteArtist(pid) {
+	function deletePlaylist(pid) {
 		showform('delete');
 	}
 
-	function browseArtist() {
+	function browsePlaylist() {
 		showform('browse');
 	}
 
@@ -59,10 +59,10 @@
 	</script>
 </head>
 
-<body onload="browseArtist()">
-	<h1>Artist</h1> [ Planets | <a href="artist">Artist</a> | <a href="playlist">Playlist</a> | People Certified ]
+<body onload="browsePlaylist()">
+	<h1>Playlist</h1> [ Planets | <a href="artist">Artist</a> | <a href="playlist">Playlist</a> | Certifications | People Certified ]
 	<div id="browse">
-		<p><a href="#" onClick="newArtist()">Add New</a> </p>
+		<p><a href="#" onClick="newPlaylist()">Add New</a> </p>
 		<table border="1" cellpadding="5">
             <!-- Access data tuple passed from app.py --> 
             {% if data %}
@@ -89,8 +89,8 @@
                             {% endfor %}
 
                             <!-- Create our edit/delete buttons -->
-						    <td><a href="edit_artist/{{item.artistId}}" class="btn btn-default">Edit</a></td>
-						    <td><a href="delete_artist/{{item.artistId}}" class="btn btn-default">Delete</a></td>
+						    <td><a href="edit_playlist/{{item.playlistId}}" class="btn btn-default">Edit</a></td>
+						    <td><a href="delete_playlist/{{item.playlistId}}" class="btn btn-default">Delete</a></td>
 
 					    </tr> 
                         {% endfor %} 
@@ -100,42 +100,48 @@
 	</div>	<!-- browse -->
 
 	<div id="insert">
-		<!-- form to INSERT new data into Artists-->
-		<form id="insertArtist" action="/artist" method="post">
-			<legend><strong>Add Artist</strong></legend>
+		<!-- form to INSERT new data into Playlists-->
+		<form id="insertPlaylist" action="/playlist" method="post">
+			<legend><strong>Add Playlist</strong></legend>
 			<fieldset>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherence -->
-				<label for="make">first name:</label>
-				<input type="text" class="form-control" id="fname" name="fname" pattern="[A-Za-z]{1,}" placeholder="" required>
+				<label for="make">playlistName:</label>
+				<input type="text" class="form-control" id="playlistName" name="playlistName" pattern="[A-Za-z0-9.@]{1,}" placeholder="" required>
 
-				<label for="model">last name:</label>
-				<input type="text" class="form-control" id="lname" name="lname" pattern="[A-Za-z]{1,}" placeholder="" required>
+				<label for="model">playlistDescription:</label>
+				<input type="text" class="form-control" id="playlistDescription" name="playlistDescription" pattern="[A-Za-z0-9.@\s]{1,}" placeholder="" required>
 
-				<label for="model">email:</label>
-				<input type="text" class="form-control" id="email" name="email" pattern="[A-Za-z0-9.@]{1,}" placeholder="" required>
+				<label for="model">userId:</label>
+				<input type="text" class="form-control" id="userId" name="userId" pattern="[0-9]{1,}" placeholder="" required>
+
+				<label for="model">numberOfSongs:</label>
+				<input type="text" class="form-control" id="numberOfSongs" name="numberOfSongs" pattern="[0-9]{1,}" placeholder="" required>
 
             </fieldset>
 
-            <!-- Create 'Add Artist' and 'Cancel' buttons -->
-			<input type="submit" value="Add Artist" name="Add_Artist" class="btn btn-primary" style="margin:.5rem;">
-			<input class="btn" type="button" value="Cancel" onClick="browseArtist()"> 
+            <!-- Create 'Add Playlist' and 'Cancel' buttons -->
+			<input type="submit" value="Add Playlist" name="Add_Playlist" class="btn btn-primary" style="margin:.5rem;">
+			<input class="btn" type="button" value="Cancel" onClick="browsePlaylist()"> 
         </form>
 	</div><!--insert-->
 	<div id="edit">
-		<!-- form to edit data in Artists-->
-		<form id="editArtist" action="/edit_artist/{{data[0].id}}" method="post">
-			<legend><strong>Edit Artist</strong></legend>
+		<!-- form to edit data in Playlists-->
+		<form id="editPlaylist" action="/edit_playlist/{{data[0].id}}" method="post">
+			<legend><strong>Edit Playlist</strong></legend>
 			<fieldset>
-				<input type="hidden" value="{{data[0].id}}" class="form-control" id="artistId" name="artistId" required>
-				<label for="make">first name:</label>
+				<input type="hidden" value="{{data[0].id}}" class="form-control" id="playlistId" name="playlistId" required>
+				
+				<label for="make">playlistName:</label>
+				<input type="text" class="form-control" id="playlistName" name="playlistName" pattern="[A-Za-z0-9.@]{1,}" placeholder="{{data[0].playlistName}}" required>
+				
+				<label for="model">playlistDescription:</label>
+				<input type="text" class="form-control" id="playlistDescription" playlistDescription="lname" pattern="[A-Za-z0-9\s]{1,}" placeholder="{{data[0].playlistDescription}}" required>
+				
+				<label for="year">userId:</label>
+				<input type="text" class="form-control" id="userId" name="userId" pattern="[A-Za-z0-9.@]{1,}" placeholder="{{data[0].userId}}" required>
 
-				<input type="text" class="form-control" id="fname" name="fname" pattern="[A-Za-z]{1,}" placeholder="{{data[0].fname}}" required>
-				<label for="model">last name:</label>
-
-				<input type="text" class="form-control" id="lname" name="lname" pattern="[A-Za-z0-9]{1,}" placeholder="{{data[0].lname}}" required>
-				<label for="year">email:</label>
-
-				<input type="text" class="form-control" id="email" name="email" pattern="[A-Za-z0-9.@]{1,}" placeholder="{{data[0].email}}" required>
+				<label for="year">numberOfSongs:</label>
+				<input type="text" class="form-control" id="numberOfSongs" name="numberOfSongs" pattern="[0-9]{1,}" placeholder="{{data[0].numberOfSongs}}" required>
         </form>
 	</div><!--edit-->
 </body>
