completed Songs table

--- a/templates/playlist.j2
+++ b/templates/playlist.j2
@@ -60,7 +60,7 @@
 </head>
 
 <body onload="browsePlaylist()">
-	<h1>Playlist</h1> [ Planets | <a href="artist">Artist</a> | <a href="playlist">Playlist</a> | Certifications | People Certified ]
+	<h1>Playlist</h1> [ Planets | <a href="artist">Artist</a> | <a href="playlist">Playlist</a> | <a href="song">Song</a> | People Certified ]
 	<div id="browse">
 		<p><a href="#" onClick="newPlaylist()">Add New</a> </p>
 		<table border="1" cellpadding="5">
