--- a/templates/edit_song.j2
+++ b/templates/edit_song.j2
@@ -8,7 +8,7 @@
 <body>
     <div>
         <table border="1" cellpadding="5"> 
-            <caption> Editing User: </caption>
+            <caption> Editing Song: </caption>
             <!-- Access data tuple passed from app.py -->
             {% if data %}
                 <thead>
@@ -46,7 +46,7 @@
                     <!-- Create hidden form input to store the passed 'id' of the person we are editing so we can access it easily in our 'POST' method in our app.py -->
                     <input type="hidden" value="{{data[0].songId}}" class="form-control" id="songId" name="songId" required>
                     
-                    <label for="make">song name:</label>
+                    <label for="make">songName:</label>
                     <input type="text" value="{{data[0].songName}}" class="form-control" id="songName" name="songName" pattern="[A-Za-z0-9.@/s]{1,}" required>
                     
                     <label for="model">albumId:</label>
@@ -56,17 +56,17 @@
                     <input type="text" value="{{data[0].artistId}}" class="form-control" id="artistId" name="artistId" pattern="[0-9]{1,}" required>
 
                     <label for="model">genre:</label>
-                    <input type="text" value="{{data[0].genre}}" class="form-control" id="genre" name="genre" pattern="[A-Za-z0-9.@/s]{1,}" required>
+                    <input type="text" value="{{data[0].genre}}" class="form-control" id="genre" name="genre" pattern="[A-Za-z.@/s]{1,}" required>
 
                     <label for="model">songLength:</label>
-                    <input type="text" value="{{data[0].songLength}}" class="form-control" id="songLength" name="songLength" pattern="[0-9]{1,}" required>
+                    <input type="text" value="{{data[0].songLength}}" class="form-control" id="songLength" name="songLength" pattern="[0-9.@/s]{1,}" required>
 
                     <label for="model">totalStreams:</label>
                     <input type="text" value="{{data[0].totalStreams}}" class="form-control" id="totalStreams" name="totalStreams" pattern="[0-9]{1,}" required>
                 
                 </fieldset>
                 <input type="submit" value="Edit Song" name="Edit_Song" class="btn btn-primary" style="margin:.5rem;">
-                <a href='/song'><input class="btn" type="button" value="cancel"></a>
+                <a href='/songs'><input class="btn" type="button" value="cancel"></a>
             </form>
 
 </html>
