Updated app.py for new tables and template files

--- a/templates/artists.j2
+++ b/templates/artists.j2
@@ -36,7 +36,7 @@
 			document.getElementById('delete').style.display = 'none';
 		}
 	}
-
+	<!-- JS functions called when <div id="<insert_update_delete_browse>" </div> button clicked-->
 	function newArtist() {
 		showform('insert');
 	}
