--- a/templates/albums.j2
+++ b/templates/albums.j2
@@ -95,8 +95,12 @@
                 <label for="yearReleased">Year Released:</label>
                 <input type="number" class="form-control" id="yearReleased" name="yearReleased" required>
 
-                <label for="artistId">Artist ID:</label>
-                <input type="number" class="form-control" id="artistId" name="artistId" required>
+                <label for="artistId">Artist:</label>
+                <select class="form-control" id="artistId" name="artistId" required>
+                    {% for artist in artists %}
+                        <option value="{{ artist.artistId }}">{{ artist.artistName }}</option>
+                    {% endfor %}
+                </select>
 
                 <label for="numberOfSongs">Number of Songs:</label>
                 <input type="number" class="form-control" id="numberOfSongs" name="numberOfSongs" required>
