--- a/templates/edit_album.j2
+++ b/templates/edit_album.j2
@@ -41,8 +41,8 @@
                     <label for="yearReleased">Year Released:</label>
                     <input type="number" value="{{data[0].yearReleased}}" class="form-control" id="yearReleased" name="yearReleased" required>
 
-                    <label for="artistName">Artist:</label>
-                    <select class="form-control" id="artistName" name="artistName" required>
+                    <label for="artistId">Artist:</label>
+                    <select class="form-control" id="artistId" name="artistId" required>
                         {% for artist in artists %}
                             <option value="{{ artist.artistId }}" {% if data[0].artistId == artist.artistId %} selected {% endif %}>
                                 {{ artist.artistName }}
