--- a/templates/edit_user.j2
+++ b/templates/edit_user.j2
@@ -44,8 +44,8 @@
                     <label for="dob">Date of Birth:</label>
                     <input type="date" value="{{data[0].dob}}" class="form-control" id="dob" name="dob" required>
 
-                    <label for="subscriptionDescription">Subscription Name:</label>
-                    <select class="form-control" id="subscriptionDescription" name="subscriptionDescription" required>
+                    <label for="subscriptionId">Subscription Name:</label>
+                    <select class="form-control" id="subscriptionId" name="subscriptionId" required>
                         {% for subscription in subscriptions %}
                             <option value="{{ subscription.subscriptionId }}" {% if data[0].subscriptionId == subscription.subscriptionId %} selected {% endif %}>
                                 {{ subscription.subscriptionDescription }}
