--- a/templates/main.j2
+++ b/templates/main.j2
@@ -14,7 +14,7 @@
         <nav>
             <a href="{{ url_for('root') }}">Home</a>
             <a href="{{ url_for('view_users') }}">Users</a>
-            <a href="{{ url_for('view_subscriptions') }}">Subscriptions</a>
+            {#<a href="{{ url_for('view_subscriptions') }}">Subscriptions</a>#}
             <a href="{{ url_for('view_albums') }}">Albums</a>
             {#<a href="{{ url_for('view_likedSongs') }}">Liked Songs</a>#}
             <a href="{{ url_for('view_artists') }}">Artists</a>
