--- a/templates/users.j2
+++ b/templates/users.j2
@@ -49,7 +49,7 @@
     </script>
 </head>
 
-<body onload="browseUser()">
+<body onload="browseUser()">    {# onload attribute automatically calls browseUser when page loads #}
     <h1>Users</h1> [ <a href="/">Home</a> | <a href="users">Users</a> | <a href="subscriptions">Subscriptions</a>  | <a href="albums">Albums</a> | <a href="likedSongs">Liked Songs</a> | <a href="artists">Artists</a> | <a href="playlists">Playlists</a> | <a href="songs">Songs</a> | <a href="addedSongs">Added Songs</a> | <a href="collaborations">Collaborations</a> ]
     <div id="browse">
         <p><a href="#" onClick="newUser()">Add New</a></p>
