Templates and headers have been updated

--- a/templates/main.j2
+++ b/templates/main.j2
@@ -16,9 +16,9 @@
             <a href="{{ url_for('view_users') }}">Users</a>
             {#<a href="{{ url_for('view_subscriptions') }}">Subscriptions</a>#}
             <a href="{{ url_for('view_albums') }}">Albums</a>
-            {#<a href="{{ url_for('view_likedSongs') }}">Liked Songs</a>#}
+            <a href="{{ url_for('view_likedSongs') }}">Liked Songs</a>
             <a href="{{ url_for('view_artists') }}">Artists</a>
-            <a href="{{ url_for('view_playlists') }}">Playlists</a>
+            {#<a href="{{ url_for('view_playlists') }}">Playlists</a>#}
             <a href="{{ url_for('view_songs') }}">Songs</a>
             {#<a href="{{ url_for('view_addedSongs') }}">Added Songs</a>#}
             {#<a href="{{ url_for('view_collaborations') }}">Collaborations</a>#}
