--- a/templates/artists.j2
+++ b/templates/artists.j2
@@ -61,7 +61,7 @@
 
 <body onload="browseArtist()">
     {# References at top of page to other pages #}
-	<h1>Artist</h1> [ <a href="/">Home</a> | <a href="users">Users</a> | <a href="subscriptions">Subscriptions</a>  | <a href="albums">Albums</a> | <a href="likedSongs">Liked Songs</a> | <a href="artists">Artists</a> | <a href="playlists">Playlists</a> | <a href="songs">Songs</a> | <a href="addedSongs">Added Songs</a> | <a href="collaborations">Collaborations</a> ]
+	<h1>Artist</h1> [ <a href="/">Home</a> | <a href="users">Users</a> | <a href="albums">Albums</a> | <a href="likedSongs">Liked Songs</a> | <a href="artists">Artists</a> | <a href="songs">Songs</a> ]
 	<div id="browse">
 		<p><a href="#" onClick="newArtist()">Add New</a> </p>
 		<table border="1" cellpadding="5">
