--- a/templates/likedSongs.j2
+++ b/templates/likedSongs.j2
@@ -50,7 +50,7 @@
 </head>
 
 <body onload="browseLikedSong()">
-    <h1>Liked Songs</h1> [ <a href="/">Home</a> | <a href="users">Users</a> | <a href="subscriptions">Subscriptions</a>  | <a href="albums">Albums</a> | <a href="likedSongs">Liked Songs</a> | <a href="artists">Artists</a> | <a href="playlists">Playlists</a> | <a href="songs">Songs</a> | <a href="addedSongs">Added Songs</a> | <a href="collaborations">Collaborations</a> ]
+    <h1>Liked Songs</h1> [ <a href="/">Home</a> | <a href="users">Users</a> | <a href="albums">Albums</a> | <a href="likedSongs">Liked Songs</a> | <a href="artists">Artists</a> | <a href="songs">Songs</a> ]
     <div id="browse">
         <p><a href="#" onClick="newLikedSong()">Add New</a></p>
         <table border="1" cellpadding="5">
